feat: consolidate September ERP repairs and native mobile push
Integrate all five actual working-tree snapshots, preserving later business rules,
57-item joint repairs, salary-source governance, native notification delivery,
and reviewed cleanup. Resolve message routing and pagination interactions.

Preserve the original worktrees and recovery refs; include source reconciliation
and current validation records in docs/reports. Local integration only.